<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frontend.fragments.MoviesFrags" >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_view" />

    <ProgressBar
        android:id="@+id/loading_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_view"
        app:layout_constraintEnd_toEndOf="@+id/rv_view"
        app:layout_constraintStart_toStartOf="@+id/rv_view"
        app:layout_constraintTop_toTopOf="@+id/rv_view" />

</androidx.constraintlayout.widget.ConstraintLayout>